# metallocechevitca

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  import_data.py  openapi.yaml  preprocess_data_for_backend.ipynb  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/models/: area.py  category.py  common.py  image_query.py  latlon.py  place.py  text_query.py
backend/app/repos/: areas_repo.py  categories_repo.py  embedding_repo.py  images_repo.py  places_repo.py  route_optimizer.py
backend/app/repos/db/: categories.py  places.py  settings.py
backend/app/repos/embeddings/: client.py  settings.py
backend/app/repos/file_storage/: images.py  settings.py
backend/app/repos/mocks/: areas_mock.py  categories_mock.py  embedding_mock.py  images_mock.py  places_mock.py
backend/app/repos/route_optimizers/: manhettan.py
backend/app/routers/: image.py  info.py  place.py  search.py  upload.py
backend/volumes/milvus/rdb_data/: IDENTITY  LOG
backend/volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
backend/volumes/minio/.minio.sys/: format.json
backend/volumes/minio/.minio.sys/tmp/.trash/: 70d58f7d-5128-42fd-9358-9b08aa1caa75
frontend/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json
frontend/src/: App.svelte
frontend/src/components/: LimitNumberInput.svelte  MultiChoiceDropdown.svelte  TextImageInput.svelte
model_server/: Dockerfile  docker-compose.yml  pyproject.toml  serve-config.yaml
model_server/app/: adapter.py  model_server.py
notebooks/: clip-model-test.ipynb  finetune-clip.ipynb  generate-synthetic-descriptions.ipynb  vit-feature-extraction.ipynb
(+14 files in other folders)
