[tool.poetry]
name = "metallocechevitca-back"
version = "0.1.0"
description = "металлочебупицца"
authors = ["Your Name <you@example.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
